# Nexora-Launcher

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  README.md
.github/: FUNDING.yml  pull_request_template.md
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  AssertHelpers.h  BaseInstance.cpp  BaseInstance.h  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  DesktopServices.cpp  Exception.h  FastFileIconProvider.cpp  FastFileIconProvider.h  FileIgnoreProxy.cpp  FileIgnoreProxy.h  FileSystem.cpp  FileSystem.h  GZip.cpp  HardwareInfo.cpp  HardwareInfo.h  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceList.cpp  (+30 more)
libraries/launcher/: CMakeLists.txt
libraries/launcher/legacy/net/minecraft/: Launcher.java
libraries/launcher/legacy/org/nexoralauncher/legacy/: LegacyFrame.java  LegacyLauncher.java  LegacyProxy.java
libraries/launcher/legacy/org/nexoralauncher/legacy/fix/online/: Handler.java  OnlineFixes.java  OnlineModeFix.java  SkinFix.java
libraries/launcher/legacy/org/nexoralauncher/legacy/utils/: Base64.java
libraries/launcher/legacy/org/nexoralauncher/legacy/utils/api/: MojangApi.java  Texture.java
libraries/launcher/legacy/org/nexoralauncher/legacy/utils/json/: JsonParseException.java  JsonParser.java
libraries/launcher/legacy/org/nexoralauncher/legacy/utils/url/: ByteArrayUrlConnection.java  UrlUtils.java
libraries/launcher/org/nexoralauncher/: EntryPoint.java  SystemProperties.java
libraries/launcher/org/nexoralauncher/exception/: ParameterNotFoundException.java  ParseException.java
libraries/launcher/org/nexoralauncher/launcher/: Launcher.java
libraries/launcher/org/nexoralauncher/launcher/impl/: AbstractLauncher.java  StandardLauncher.java
libraries/launcher/org/nexoralauncher/legacy/: LegacyProxy.java
libraries/launcher/org/nexoralauncher/utils/: Parameters.java  ReflectionUtils.java
libraries/launcher/org/nexoralauncher/utils/logging/: Level.java  Log.java
(+468 files in other folders)
